--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+             <p>Apakah Kamu menyukainya</p>
+            <p id="replay">Jika iya silahkan di putar kembali.</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
